{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 465,
  "lineage": "4e6ed7e5-7abc-20bf-932d-c98ba95a3ad1",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicdiagftd",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/networkInterfaces/nic-diag-ftd--devwks3050",
            "internal_domain_name_suffix": "ymw5vuimgede1euum4t5ua4w4d.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-diag-ftd-devwks3050",
                "primary": true,
                "private_ip_address": "10.121.11.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-diag-devwks3050"
              }
            ],
            "location": "eastus",
            "name": "nic-diag-ftd--devwks3050",
            "private_ip_address": "10.121.11.4",
            "private_ip_addresses": [
              "10.121.11.4"
            ],
            "resource_group_name": "rg-devwks3050"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.diagsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicinsideftd",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/networkInterfaces/nic-inside-ftd--devwks3050",
            "internal_domain_name_suffix": "ymw5vuimgede1euum4t5ua4w4d.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-inside-ftd-devwks3050",
                "primary": true,
                "private_ip_address": "10.121.12.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-inside-devwks3050"
              }
            ],
            "location": "eastus",
            "name": "nic-inside-ftd--devwks3050",
            "private_ip_address": "10.121.12.4",
            "private_ip_addresses": [
              "10.121.12.4"
            ],
            "resource_group_name": "rg-devwks3050"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.insidesubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicinsidehost",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/networkInterfaces/nic-inside-host--devwks3050",
            "internal_domain_name_suffix": "ymw5vuimgede1euum4t5ua4w4d.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-insidehost-devwks3050",
                "primary": true,
                "private_ip_address": "10.121.12.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-inside-devwks3050"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-57-FB-80",
            "name": "nic-inside-host--devwks3050",
            "private_ip_address": "10.121.12.5",
            "private_ip_addresses": [
              "10.121.12.5"
            ],
            "resource_group_name": "rg-devwks3050",
            "virtual_machine_id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Compute/virtualMachines/insidehost"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.insidesubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicmgmtfmc",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/networkInterfaces/nic-mgmt-fmc-devwks3050",
            "internal_domain_name_suffix": "ymw5vuimgede1euum4t5ua4w4d.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-mgmt-fmc-devwks3050",
                "primary": true,
                "private_ip_address": "10.121.10.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/publicIPAddresses/fmc-pip-devwks3050",
                "subnet_id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-mgmt-devwks3050"
              }
            ],
            "location": "eastus",
            "name": "nic-mgmt-fmc-devwks3050",
            "private_ip_address": "10.121.10.4",
            "private_ip_addresses": [
              "10.121.10.4"
            ],
            "resource_group_name": "rg-devwks3050"
          },
          "dependencies": [
            "azurerm_public_ip.fmcpubip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mgmtsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicmgmtftd",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/networkInterfaces/nic-mgmt-ftd--devwks3050",
            "internal_domain_name_suffix": "ymw5vuimgede1euum4t5ua4w4d.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-mgmt-ftd-devwks3050",
                "primary": true,
                "private_ip_address": "10.121.10.6",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-mgmt-devwks3050"
              }
            ],
            "location": "eastus",
            "name": "nic-mgmt-ftd--devwks3050",
            "private_ip_address": "10.121.10.6",
            "private_ip_addresses": [
              "10.121.10.6"
            ],
            "resource_group_name": "rg-devwks3050"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.mgmtsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicmgmtjumphost",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/networkInterfaces/nic-mgmt-jumphost-devwks3050",
            "internal_domain_name_suffix": "ymw5vuimgede1euum4t5ua4w4d.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-mgmt-jumphost-devwks3050",
                "primary": true,
                "private_ip_address": "10.121.10.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/publicIPAddresses/jumphost-pip-devwks3050",
                "subnet_id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-mgmt-devwks3050"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-35-25-D5",
            "name": "nic-mgmt-jumphost-devwks3050",
            "private_ip_address": "10.121.10.5",
            "private_ip_addresses": [
              "10.121.10.5"
            ],
            "resource_group_name": "rg-devwks3050",
            "virtual_machine_id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Compute/virtualMachines/jumphost"
          },
          "dependencies": [
            "azurerm_public_ip.jumphost",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mgmtsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nicoutsideftd",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/networkInterfaces/nic-outside-ftd--devwks3050",
            "internal_domain_name_suffix": "ymw5vuimgede1euum4t5ua4w4d.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-outside-ftd-devwks3050",
                "primary": true,
                "private_ip_address": "10.121.13.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-outside-devwks3050"
              }
            ],
            "location": "eastus",
            "name": "nic-outside-ftd--devwks3050",
            "private_ip_address": "10.121.13.4",
            "private_ip_addresses": [
              "10.121.13.4"
            ],
            "resource_group_name": "rg-devwks3050"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.outsidesubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "FTDv_NIC0_NSG",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/networkInterfaces/nic-mgmt-ftd--devwks3050|/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/networkSecurityGroups/devwks3050-allow-all",
            "network_interface_id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/networkInterfaces/nic-mgmt-ftd--devwks3050",
            "network_security_group_id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/networkSecurityGroups/devwks3050-allow-all"
          },
          "dependencies": [
            "azurerm_network_interface.nicmgmtftd",
            "azurerm_network_security_group.allow-all",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mgmtsubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "allow-all",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/networkSecurityGroups/devwks3050-allow-all",
            "location": "eastus",
            "name": "devwks3050-allow-all",
            "resource_group_name": "rg-devwks3050",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Outbound-Allow-All",
                "priority": 1002,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22-8305",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "TCP-Allow-All",
                "priority": 1001,
                "protocol": "tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fmcpubip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/publicIPAddresses/fmc-pip-devwks3050",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "fmc-pip-devwks3050",
            "resource_group_name": "rg-devwks3050",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jumphost",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/publicIPAddresses/jumphost-pip-devwks3050",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.191.31.240",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "jumphost-pip-devwks3050",
            "resource_group_name": "rg-devwks3050",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "FTD_NIC2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/routeTables/devwks3050-RT-Subnet2",
            "location": "eastus",
            "name": "devwks3050-RT-Subnet2",
            "resource_group_name": "rg-devwks3050",
            "route": [],
            "subnets": [
              "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-inside-devwks3050"
            ],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "FTD_NIC3",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/routeTables/devwks3050-RT-Subnet3",
            "location": "eastus",
            "name": "devwks3050-RT-Subnet3",
            "resource_group_name": "rg-devwks3050",
            "route": [],
            "subnets": [
              "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-outside-devwks3050"
            ],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "diagsubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.121.11.0/24",
            "address_prefixes": [
              "10.121.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-diag-devwks3050",
            "name": "subnet-diag-devwks3050",
            "resource_group_name": "rg-devwks3050",
            "virtual_network_name": "vnet-devwks3050"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "insidesubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.121.12.0/24",
            "address_prefixes": [
              "10.121.12.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-inside-devwks3050",
            "name": "subnet-inside-devwks3050",
            "resource_group_name": "rg-devwks3050",
            "virtual_network_name": "vnet-devwks3050"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mgmtsubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.121.10.0/24",
            "address_prefixes": [
              "10.121.10.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-mgmt-devwks3050",
            "name": "subnet-mgmt-devwks3050",
            "resource_group_name": "rg-devwks3050",
            "virtual_network_name": "vnet-devwks3050"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "outsidesubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.121.13.0/24",
            "address_prefixes": [
              "10.121.13.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-outside-devwks3050",
            "name": "subnet-outside-devwks3050",
            "resource_group_name": "rg-devwks3050",
            "virtual_network_name": "vnet-devwks3050"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "rt-associa-2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-inside-devwks3050",
            "route_table_id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/routeTables/devwks3050-RT-Subnet2",
            "subnet_id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-inside-devwks3050"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.FTD_NIC2",
            "azurerm_subnet.insidesubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "rt-associa-3",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-outside-devwks3050",
            "route_table_id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/routeTables/devwks3050-RT-Subnet3",
            "subnet_id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-outside-devwks3050"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.FTD_NIC3",
            "azurerm_subnet.outsidesubnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.121.0.0/16"
            ],
            "guid": "d1fa2dc3-310c-4d06-9294-67a7fa03d6f3",
            "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050",
            "location": "eastus",
            "name": "vnet-devwks3050",
            "resource_group_name": "rg-devwks3050",
            "subnet": [
              {
                "address_prefix": "10.121.10.0/24",
                "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-mgmt-devwks3050",
                "name": "subnet-mgmt-devwks3050"
              },
              {
                "address_prefix": "10.121.11.0/24",
                "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-diag-devwks3050",
                "name": "subnet-diag-devwks3050"
              },
              {
                "address_prefix": "10.121.12.0/24",
                "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-inside-devwks3050",
                "name": "subnet-inside-devwks3050"
              },
              {
                "address_prefix": "10.121.13.0/24",
                "id": "/subscriptions/60c7e748-af46-4ad0-bcdf-0c518aa20c9c/resourceGroups/rg-devwks3050/providers/Microsoft.Network/virtualNetworks/vnet-devwks3050/subnets/subnet-outside-devwks3050",
                "name": "subnet-outside-devwks3050"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}